--- a/src/components/style.css
+++ b/src/components/style.css
@@ -536,6 +536,7 @@ right: 0px;
     background: var(--text-white, #FFF);
     box-shadow: 0px 0px 8.187px 1.688px rgba(0, 0, 0, 0.15);
     padding-bottom:10px ;
+    cursor: pointer;
 
 }
 
@@ -557,6 +558,13 @@ right: 0px;
     font-weight: 700;text-transform: uppercase;
 }
 
+#gal-container .right{
+    display: none;
+}
+
+#gal-container .right.active{
+    display: block;
+}
 
 
 
@@ -2339,6 +2347,9 @@ justify-content: center;
     gap: 20px;
     width: 978px;
 }
+.theme-cs-box{
+    width: 100%;
+}
 
 .theme-cs-box .cs-select{
     display: flex;
@@ -2353,6 +2364,7 @@ justify-content: center;
     align-items: center;
     background-color: #FDEBF6;
     color: white;
+    cursor: pointer;
 }
 
 .theme-cs-box .cs-select .cs.active{
