--- a/src/components/style.css
+++ b/src/components/style.css
@@ -487,7 +487,9 @@ right: 0px;
 .resource-box .detail a{
     width: 100%;
     text-align: end;
-    /* color:  #0000EE; */
+    /* background:none;
+    border: none;*/
+    cursor: pointer; 
     text-decoration: underline;
     font-size: 12.5px;
     font-weight: 500;
@@ -934,7 +936,7 @@ gap: 18px;
     display: flex;
     width: 261.5px;
     height: 82.5px;
-    justify-content:center;
+    justify-content:flex-start;
     align-items: flex-start;
     flex-direction: row;
     gap: 15px;
