--- a/src/components/style.css
+++ b/src/components/style.css
@@ -501,7 +501,7 @@ right: 0px;
 
 
 .gallery{
-    width: 1024px;
+    width: 1038px;
 }
 
 .gallery-right{
@@ -637,7 +637,7 @@ right: 0px;
     width: 973px;
 }
 
-#about, #case_studies{
+#about{
     margin-top: 70px;
 }
 
@@ -681,10 +681,33 @@ right: 0px;
 
 .member-card{
     width: 185px;
+    position: relative;
     height: 278.777px;
     position: relative;
+    box-shadow: 0px 0px 11.25px 1.266px rgba(0, 0, 0, 0.1);
     
 }
+
+
+/* .member-card::before{
+    content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)); 
+  transition: 0.5s ease-in-out; 
+  z-index: 1; 
+}
+
+.member-card:hover::before{
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); 
+} */
+
+
+
+
 
 .member-img{
     display: block;
@@ -723,6 +746,11 @@ right: 0px;
 height: 1.436px;
 margin: 0px auto;
 background-color: var(--text-pink);
+transition: 0.4s ease-in-out; 
+}
+
+.member-card:hover .member-details .member-line{
+    width: 125px;
 }
 
 .member-details .position{
@@ -833,13 +861,17 @@ gap: 17.75px;
     display: flex;
     flex-direction: column;
 }
-.recent-workshops{
-    width: 312px;
-height: 413.25px;
-display: flex;
+.recent-workshops {
+    min-width: 312px; /* Fixed width */
+    max-height: 413.25px; /* Maximum height */
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-y: auto; /* Add vertical scrollbar when needed */
+    display: flex;
     flex-direction: column;
     background: #F7EDF7;
+    box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
 }
+
 .popular-tags{
     padding: 18px 18px 37.5px 37.5px;
     width: 312px;
@@ -907,9 +939,7 @@ line-height: 21px;
 }
 
 .recent-workshops{
-    padding: 32px;
-
-padding-left: 18px;
+    padding: 26px;
 
 }
 .recent-workshops h2{
@@ -1001,11 +1031,12 @@ background: #EC028C;
 /* gallery */
 
 .gallery-container{
-    width: 1024px;
+    width: 1038px;
     display: grid;
     grid-template-columns:repeat(4,1fr);
     grid-auto-rows:220px;
     gap: 13.16px;
+    overflow: hidden;
   
 }
 
@@ -1013,8 +1044,11 @@ background: #EC028C;
     margin-top: 144px;
 }
 
-.gallery-box{
-    background-size: cover;
+
+
+.worshop-detail-home.gallery-box{
+    height: 188px;
+    width: 250px;
 }
 #two-col{
     grid-column: span 2;
@@ -1030,6 +1064,7 @@ background: #EC028C;
 
 #profile-bg{
     height: 250px;
+    background-size: cover;
 }
 .name-section{
 width: 100%;
@@ -1109,6 +1144,13 @@ font-size: 16.141px;
 font-weight: 400;
 font-size: 16.141px;
 
+}
+
+.imp-detail ul li a{
+    color:#172f5c;
+    text-decoration: underline;
+    cursor: pointer;
+    font-weight: 500;
 }
 .imp-detail li{
     list-style-type: none;
@@ -1276,9 +1318,8 @@ text-transform: capitalize;
 }
 .btn{
     display: flex;
-    width: 133.25px;
     height: 48.75px;
-    padding: 9px 18px;
+    padding: 9px 20px;
     justify-content: center;
     align-items: center;
     font-weight: 400;
@@ -1290,12 +1331,25 @@ text-transform: capitalize;
     color: #FFF;
     
 }
+
+/* .btn.opp{
+    background-color: #FFF;
+    color: var(--text-pink);
+    box-shadow: 0px 2px 8.187px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    color: black;
+}
+
+.btn.opp:hover{
+    border: none;
+    color: var(--text-pink);
+} */
+
 .btn-text{
     display: flex;
     color: var(--text-white, #FFF);
     justify-content: center;
     align-items: center;
-   
     border: 0px;
    
 }
@@ -1315,15 +1369,10 @@ height: 33.75px;
 color: white;
 }
 .btn:hover{
-    display: flex;
-    width: 133.5px;
-    height: 48.75px;
-    justify-content: center;
-    gap: 7.5px;
     background: #ffffff;
     border: 3px solid #EC028C;
     color: #000000;
-    font-weight: 500;
+    
 
 }
 .btn:hover p{
@@ -1472,7 +1521,6 @@ text-transform: capitalize;
 }
 .area-head{
     width: 296.25px;
-    height: 159px;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -1516,7 +1564,7 @@ width: 296px;
 .area-desc{
     display: flex;
     flex-direction: column;
-    gap: 33.75px;
+    gap: 18px;
 }
 .area-cards{
     width: 385.6px;
@@ -1610,34 +1658,53 @@ head{
     gap:16.34px;
 }
 .detail{
-    
     display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 13.69px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 13.69px;
     display: none;
 }
 .worshop-detail-home{
 
 width: 310.673px;
 height: 232px;
+position: relative;
+background-image: url('../images/about1.jpg');
 background-repeat: no-repeat;
 background-size: cover;
 flex-shrink: 0;
 transition: all 0.3s ease;
 cursor: pointer;
+overflow: hidden;
 }
 
-.worshop-detail-home:hover{
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%); /* Darker gradient on hover */
+.worshop-detail-home::before{
+    content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)); /* Initial state with no gradient */
+  transition: 0.5s ease-in-out; /* Smooth transition */
+  z-index: 1; 
 }
-/*  */
+
+.worshop-detail-home:hover::before{
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); /* Dark gradient on hover */
+}
+
+
 
 .worshop-detail-home:hover .detail{
     padding: 26px;
+    position: relative;
     display: flex;
+    height: 100%;
     flex-direction: column;
+    justify-content: center;
 align-items: flex-start;
+z-index: 2;
 gap: 13.69px;
 }
 .worshop-detail-home h2{
@@ -1697,6 +1764,7 @@ align-items: center;
    display: flex;
    gap: 9px;
    margin-top: 5px;
+   cursor: pointer;
 }
 
 /* objective */
@@ -1844,9 +1912,12 @@ text-transform: capitalize;
 }
 
 
-
+.stories-content, .workshop-content-home{
+    width: 974px;
+}
 
 /* story css */
+
 .stories-page{
     display: flex;
     margin: auto;
@@ -1854,6 +1925,25 @@ text-transform: capitalize;
     /* text-align: center; */
     align-items: center;
     gap: 26.01px;
+}
+
+.story{
+    width: 310px !important;
+}
+
+
+.stories{
+    width: 100%;
+}
+
+.story p{
+    margin-top: 10px;
+}
+
+.story img{
+    width: 310px;
+    height: 232px;
+    object-fit: cover;
 }
 
 .stories-body{
@@ -2472,6 +2562,11 @@ justify-content: center;
 /* case study css*/
 
 
+#case_study-select{
+    width: 80%;
+    margin: auto;
+}
+
 
 #case_studies-right .case_studies .column{
     display: flex;
@@ -2494,4 +2589,18 @@ text-transform: capitalize;
 
 #case_studies-right{
     margin: auto;
+}
+
+
+.case_studies .photos{
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.case_studies .photos img{
+    height: 188px;
+    width: 250px;
+    object-fit: cover;
 }
