--- a/src/components/style.css
+++ b/src/components/style.css
@@ -565,7 +565,7 @@ right: 0px;
 }
 
 .gal-cs-box{
-    flex: 0 0 19%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2657,8 +2657,10 @@ justify-content: center;
 
 
 #case_studies-right .case_studies .column{
+    width: 100%;
     display: flex;
     gap: 15px;
+    justify-content: space-between;
 }
 #case_studies-right section{
     width: 1038px;
